--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 h1 {
     color: aqua;
 }
+input{
+    text-align: center;
+    display: grid;
+    align-items: center;
+    margin: 50px;
+    font-family: cursive;
+    font-size: large;
+    font-weight: 300;
+}
+#cel{
+    margin: 50px;
+    display: grid;
+}
